--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,8 @@
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.version>4.1.4.RELEASE</spring.version>
+    <!--<spring.version>4.1.4.RELEASE</spring.version>-->
+	  <spring.version>5.0.4.RELEASE</spring.version>
   </properties>
 	<dependencyManagement>
 		<dependencies>
@@ -145,7 +146,12 @@
             <groupId>org.springframework</groupId>  
             <artifactId>spring-test</artifactId>  
             <version>${spring.version}</version>  
-        </dependency> 
+        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
   		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
