--- a/springtest/pom.xml
+++ b/springtest/pom.xml
@@ -25,5 +25,9 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+      </dependency>
   </dependencies>
 </project>
