--- a/springtest/pom.xml
+++ b/springtest/pom.xml
@@ -33,5 +33,9 @@
           <artifactId>spring-test</artifactId>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>javax.inject</groupId>
+          <artifactId>javax.inject</artifactId>
+      </dependency>
   </dependencies>
 </project>
