--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
 			<scope>provided</scope>
 		</dependency>
 			<dependency>
+				<groupId>javax.inject</groupId>
+				<artifactId>javax.inject</artifactId>
+				<version>1</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.json</groupId>
 				<artifactId>json</artifactId>
 				<version>20090211</version>
