--- a/springtest/pom.xml
+++ b/springtest/pom.xml
@@ -37,5 +37,9 @@
           <groupId>javax.inject</groupId>
           <artifactId>javax.inject</artifactId>
       </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+      </dependency>
   </dependencies>
 </project>
