--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,9 @@
     <!--<spring.version>4.1.4.RELEASE</spring.version>-->
 	  <spring.version>5.0.4.RELEASE</spring.version>
 	  <lombok.version>1.16.18</lombok.version>
+	  <aspectj.version>1.8.4</aspectj.version>
+	  <logback.version>1.1.1</logback.version>
+	  <slf4j.version>1.7.10</slf4j.version>
   </properties>
 	<dependencyManagement>
 		<dependencies>
@@ -57,9 +60,26 @@
 			<version>5.1.24</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+			<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<type>jar</type>
 		</dependency>
 	<!-- mybatis -->
 		<dependency>
@@ -162,7 +182,7 @@
   		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
-			<version>1.8.4</version>
+			<version>${aspectj.version}</version>
 		</dependency>
 		<!-- SPring-mybatis -->
 		<dependency>
