--- a/springtest/pom.xml
+++ b/springtest/pom.xml
@@ -34,12 +34,30 @@
           <scope>test</scope>
       </dependency>
       <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+      </dependency>
+      <dependency>
           <groupId>javax.inject</groupId>
           <artifactId>javax.inject</artifactId>
       </dependency>
       <dependency>
           <groupId>org.projectlombok</groupId>
           <artifactId>lombok</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-core</artifactId>
+          <type>jar</type>
+      </dependency>
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+          <type>jar</type>
       </dependency>
   </dependencies>
 </project>
