--- a/fantasybaby-common/pom.xml
+++ b/fantasybaby-common/pom.xml
@@ -14,5 +14,9 @@
   <name>fantasybaby-common</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
   </dependencies>
 </project>
