--- a/springtest/pom.xml
+++ b/springtest/pom.xml
@@ -59,5 +59,10 @@
           <artifactId>logback-classic</artifactId>
           <type>jar</type>
       </dependency>
+      <dependency>
+          <groupId>com.fantasybaby</groupId>
+          <artifactId>fantasybaby-common</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
   </dependencies>
 </project>
