--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	<modules>
 		<module>springtest</module>
 		<module>fantasybaby-common</module>
+		<module>spring-web-test</module>
 		<!-- SpringMVC+mybatis -->
 		<!-- <module>../user-dao-mybatis-mvc</module> -->
 		<!-- <module>../user-dao-mabatis</module>
@@ -31,7 +32,6 @@
 		<module>../user-common-bean</module>
     	<module>../webServiceTest</module>
 		<module>../webscoket</module> -->
-    <module>fantasybaby-common</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
