--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ subprojects {
   repositories {
     mavenLocal()
     
-    maven { url "http://localhost:8081/nexus/content/groups/public/" }
-    maven { url "http://repo.maven.apache.org/maven2" }
+//    maven { url "http://localhost:8081/nexus/content/groups/public/" }
+    maven{url "http://maven.aliyun.com/nexus/content/groups/public/"}
     jcenter()
   }
 
