--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ subprojects {
     springVersion ='5.0.4.RELEASE'
     lombokVersion ='1.16.16'
     logbackVersion = '1.1.1'
+    servletVersion = '3.0-alpha-1'
   }
   dependencies{
     compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.10'
@@ -28,10 +29,10 @@ subprojects {
   
   repositories {
     mavenLocal()
-    
+    mavenCentral()
 //    maven { url "http://localhost:8081/nexus/content/groups/public/" }
     maven{url "http://maven.aliyun.com/nexus/content/groups/public/"}
-    jcenter()
+//    jcenter()
   }
 
   
