--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ subprojects {
 //    mavenCentral()
     maven { url "http://localhost:8081/nexus/content/groups/public/" }
     maven{url "http://maven.aliyun.com/nexus/content/groups/public/"}
-//    jcenter()
+    jcenter()
   }
 
   
