--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,10 @@ rootProject.name = 'framwork-test'
 include ':spring-test'
 include ':fantasybaby-common'
 include ':spring-web-test'
-
+include 'mybatis-test'
 project(':spring-test').projectDir = "$rootDir/springtest" as File
 project(':fantasybaby-common').projectDir = "$rootDir/fantasybaby-common" as File
 project(':spring-web-test').projectDir = "$rootDir/spring-web-test" as File
+project(':mybatis-test').projectDir = "$rootDir/mybatis-test" as File
+
+
