--- a/mybatis-test/build.gradle
+++ b/mybatis-test/build.gradle
@@ -5,4 +5,9 @@ dependencies{
     compile 'com.baomidou:mybatis-plus:3.0.6'
     compile 'org.apache.velocity:velocity-engine-core:+'
     compile 'org.freemarker:freemarker:+'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.1.0.RELEASE'
+
 }
